@@ -23,6 +23,7 @@
  22. Proficiency cap from practicing now in INI file (see PRACMAXPCT)
  23. Unit Tests (TEST command) are now friendlier and more accessible
  24. Wish/Limited Wish now has a configuration file in resources/skills/wish.txt
+ 25. Unleveling and Unleveling from XP loss can be disabled in the INI file
 
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
